--- a/objects/index.html
+++ b/objects/index.html
@@ -10,23 +10,26 @@
 
     <!-- Sidebar Form -->
     <div class="sidebar">
-        <h2>Filter Options</h2>
-        <form>
+        <h2>Add a new book</h2>
+        <form id="fields">
             <div class="form-group">
-                <label for="category">Category</label>
-                <select id="category" name="category">
-                    <option value="all">All</option>
-                    <option value="tech">Technology</option>
-                    <option value="lifestyle">Lifestyle</option>
-                    <option value="education">Education</option>
-                </select>
+                <label for="title">Title</label>
+                <input type="text" id="title" name="title" placeholder="Book name..." required> 
             </div>
             <div class="form-group">
-                <label for="search">Search</label>
-                <input type="text" id="search" name="search" placeholder="Search...">
+                <label for="author">Author</label>
+                <input type="text" id="author" name="author" placeholder="Author name..." required>
             </div>
             <div class="form-group">
-                <button type="submit">Apply Filters</button>
+                <label for="pages">Pages</label>
+                <input type="number" id="pages" name="pages" placeholder="Number of pages..." required>
+            </div>
+            <div class="form-group">
+                <label for="year">Year</label>
+                <input type="number" id="year" name="year" placeholder="Year..." required>
+            </div>
+            <div class="form-group">
+                <button type="submit">Add</button>
             </div>
         </form>
     </div>
